Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.0 Beta3
-
None
-
7b1f3bdc5 (dev), 5caa31cb2 (6.8)
Description
When testing Qt 6.8.0 Beta 3 an issue regarding QByteArray::lastIndexOf() popped up.
This test snippet runs successfully with Qt 6.7.2 but fails with Qt 6.8.0 Beta 3. lastIndexOf returns -1 here as it fails to detect the casted char.
const auto a = QByteArray::fromHex("800080"); QCOMPARE(a.lastIndexOf(static_cast<char>(0x80)), 2);
Attachments
For Gerrit Dashboard: QTBUG-128199 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
583809,1 | QByteArray: add indexOf/lastIndexOf test | dev | qt/qtbase | Status: ABANDONED | -2 | 0 |
583810,5 | QByteArray: fix lastIndexOf for char values with set sign bit | dev | qt/qtbase | Status: MERGED | +2 | 0 |
584211,2 | QByteArray: fix lastIndexOf for char values with set sign bit | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |