tests/auto/corelib/text/qbytearray/tst_qbytearray.cpp
@@ -119,6 +119,11 @@ private slots:
     void isUpper();
     void isLower();
 
+    void indexOf_data();
+    void indexOf();
+    void lastIndexOf_data();
+    void lastIndexOf();
+
     void macTypes();
 
     void stdString();
@@ -2586,6 +2591,93 @@ void tst_QByteArray::isLower()
     QVERIFY(QByteArray("@abyz[").isLower());
     QVERIFY(!QByteArray("`ABYZ{").isLower());
     QVERIFY(QByteArray("`abyz{").isLower());
+}
+
+using ByteArrayOrChar = std::variant<QByteArray, char>;
+void tst_QByteArray::indexOf_data()
+{
+    qRegisterMetaType<ByteArrayOrChar>();
+    QTest::addColumn<QByteArray>("haystack");
+    QTest::addColumn<ByteArrayOrChar>("needle");
+    QTest::addColumn<int>("expectedIndex");
+    QTest::addColumn<int>("from");
+
+    const QByteArray haystack = "abc 123 cba \x80 \x08 \x00 \x01 \x81"_ba;
+
+    QTest::newRow("not_found_1_char_string") << haystack << ByteArrayOrChar("d"_ba) << -1 << 0;
+    QTest::newRow("not_found_char") << haystack << ByteArrayOrChar('d') << -1 << 0;
+
+    QTest::newRow("not_found_string") << haystack << ByteArrayOrChar("abcd"_ba) << -1 << 0;
+    QTest::newRow("found_1_char_string") << haystack << ByteArrayOrChar("a"_ba) << 0 << 0;
+
+    QTest::newRow("found_char") << haystack << ByteArrayOrChar('a') << 0 << 0;
+    QTest::newRow("found_string") << haystack << ByteArrayOrChar("cba"_ba) << 8 << 0;
+
+    QTest::newRow("found_empty_string") << haystack << ByteArrayOrChar(""_ba) << 0 << 0;
+
+    QTest::newRow("found_embedded_null") << haystack << ByteArrayOrChar("\x00"_ba) << 16 << 0;
+    QTest::newRow("not_found_terminating_null") << haystack << ByteArrayOrChar("\x00"_ba) << -1 << 17;
+    QTest::newRow("found_char_star_0x80") << haystack << ByteArrayOrChar("\x80"_ba) << 12 << 0;
+    QTest::newRow("found_char_0x80") << haystack << ByteArrayOrChar('\x80') << 12 << 0;
+    QTest::newRow("found_char_0x81") << haystack << ByteArrayOrChar('\x81') << 20 << 0;
+}
+
+void tst_QByteArray::indexOf()
+{
+    QFETCH(QByteArray, haystack);
+    QFETCH(ByteArrayOrChar, needle);
+    QFETCH(int, expectedIndex);
+    QFETCH(int, from);
+
+    if (auto *qba = std::get_if<QByteArray>(&needle)) {
+        QCOMPARE(haystack.indexOf(*qba, from), expectedIndex);
+    } else {
+        char c = std::get<char>(needle);
+        QCOMPARE(haystack.indexOf(c, from), expectedIndex);
+    }
+}
+
+void tst_QByteArray::lastIndexOf_data()
+{
+    qRegisterMetaType<ByteArrayOrChar>();
+    QTest::addColumn<QByteArray>("haystack");
+    QTest::addColumn<ByteArrayOrChar>("needle");
+    QTest::addColumn<int>("expectedIndex");
+    QTest::addColumn<int>("from");
+
+    const QByteArray haystack = "abc 123 cba \x80 \x08 \x00 \x01 \x81"_ba;
+
+    QTest::newRow("not_found_1_char_string") << haystack << ByteArrayOrChar("d"_ba) << -1 << -1;
+    QTest::newRow("not_found_char") << haystack << ByteArrayOrChar('d') << -1 << -1;
+
+    QTest::newRow("not_found_string") << haystack << ByteArrayOrChar("abcd"_ba) << -1 << -1;
+    QTest::newRow("found_1_char_string") << haystack << ByteArrayOrChar("a"_ba) << 10 << -1;
+
+    QTest::newRow("found_char") << haystack << ByteArrayOrChar('a') << 10 << -1;
+    QTest::newRow("found_string") << haystack << ByteArrayOrChar("cba"_ba) << 8 << -1;
+
+    QTest::newRow("found_empty_string") << haystack << ByteArrayOrChar(""_ba) << haystack.size() << -1;
+
+    QTest::newRow("found_embedded_null") << haystack << ByteArrayOrChar("\x00"_ba) << 16 << -1;
+    QTest::newRow("not_found_leading_null") << haystack << ByteArrayOrChar("\x00"_ba) << -1 << 15;
+    QTest::newRow("found_char_star_0x80") << haystack << ByteArrayOrChar("\x80"_ba) << 12 << -1;
+    QTest::newRow("found_char_0x80") << haystack << ByteArrayOrChar('\x80') << 12 << -1;
+    QTest::newRow("found_char_0x81") << haystack << ByteArrayOrChar('\x81') << 20 << -1;
+}
+
+void tst_QByteArray::lastIndexOf()
+{
+    QFETCH(QByteArray, haystack);
+    QFETCH(ByteArrayOrChar, needle);
+    QFETCH(int, expectedIndex);
+    QFETCH(int, from);
+
+    if (auto *qba = std::get_if<QByteArray>(&needle)) {
+        QCOMPARE(haystack.lastIndexOf(*qba, from), expectedIndex);
+    } else {
+        char c = std::get<char>(needle);
+        QCOMPARE(haystack.lastIndexOf(c, from), expectedIndex);
+    }
 }
 
 void tst_QByteArray::macTypes()
